# python-multi-module-app

./: Makefile  README.md
applications/app-1/: Makefile  pyproject.toml
applications/app-1/src/app_1/: handler.py
applications/app-1/tests/: test_handler.py
applications/app-2/: Makefile  pyproject.toml
applications/app-2/src/app_2/: handler.py
applications/app-2/tests/: test_handler.py
