[tool.poetry]
name = "app-1"
version = "0.1.0"
description = "app-1"
authors = ["Dhananjaya <dhananjaya.singhar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
numpy = "^2.0.1"
pymongo = "^4.8.0"
boto3 = "1.34.158"


[tool.poetry.group.test.dependencies]
pytest = "==8.3.2"
coverage = "==7.6.1"
pytest-cov = "==5.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
